# ncvis

./: .gitignore  CMakeLists.txt  FindNetCDF.cmake  INSTALL.md  LICENSE  README.md  build.sh
resources/: README  algae.rgb  amp.rgb  balance.rgb  curl.rgb  deep.rgb  delta.rgb  dense.rgb  diff.rgb  gray.rgb  haline.rgb  ice.rgb  matter.rgb  oxy.rgb  phase.rgb  rain.rgb  solar.rgb  speed.rgb  tarn.rgb  tempo.rgb  thermal.rgb  topo.rgb  turbid.rgb
src/: Announce.cpp  Announce.h  CMakeLists.txt  ColorMap.cpp  ColorMap.h  CoordTransforms.h  DataArray1D.h  Exception.h  GridDataSampler.cpp  GridDataSampler.h  GriddedData.h  NcVisPlotOptions.h  QuadTree.h  ShpFile.cpp  ShpFile.h  TimeObj.cpp  TimeObj.h  build.sh  ncvalues.cpp  ncvis.cpp  netcdf.cpp  netcdfcpp.h  schrift.cpp  utf8_to_utf32.h  wxImagePanel.cpp  wxImagePanel.h  wxNcVisExportDialog.cpp  wxNcVisExportDialog.h  wxNcVisFrame.cpp  wxNcVisFrame.h  wxNcVisLinePlot.cpp  wxNcVisLinePlot.h  wxNcVisOptionsDialog.cpp  wxNcVisOptionsDialog.h  wxNcVisOptsDialog.cpp  wxNcVisOptsDialog.h
