cmake_minimum_required(VERSION 3.1)

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR})

# Name the project
project(ncvis 
  VERSION 0.1
  LANGUAGES CXX
)

# Set some standard settings
set (CMAKE_CXX_STANDARD 11 CACHE STRING "The C++ standard to use")
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_EXTENSIONS OFF)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_SHARED_LINKER_FLAGS "-Wl,--as-needed")
set (CMAKE_GNU_FLAGS "-fpermissive")

# Find wxWidgets libraries
find_package(wxWidgets REQUIRED gl core base OPTIONAL_COMPONENTS net)
include(${wxWidgets_USE_FILE})

# Configure with NetCDF_ROOT=$PATH_TO_NETCDF_INSTALL
find_package(NetCDF REQUIRED)

find_program(NCCONFIG_EXE NAMES nc-config PATHS ${NETCDF_DIR}/bin ${NetCDF_ROOT}/bin)

# Get all necessary config flags
execute_process(COMMAND "${wxWidgets_CONFIG_EXECUTABLE}" "--cxxflags" OUTPUT_VARIABLE WX_COMPILE_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND "${wxWidgets_CONFIG_EXECUTABLE}" "--prefix" OUTPUT_VARIABLE WXCONFIG_RPATH OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND "${wxWidgets_CONFIG_EXECUTABLE}" "--libs" OUTPUT_VARIABLE WX_LINK_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)

execute_process(COMMAND "${NCCONFIG_EXE}" "--cflags" OUTPUT_VARIABLE NC_COMPILE_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND "${NCCONFIG_EXE}" "--includedir" OUTPUT_VARIABLE NC_INCLUDE_DIR OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND "${NCCONFIG_EXE}" "--libdir" OUTPUT_VARIABLE NC_LIB_DIR OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND "${NCCONFIG_EXE}" "--libs" "--static" OUTPUT_VARIABLE NC_LINK_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_GNU_FLAGS} ${WX_COMPILE_FLAGS} ${NC_COMPILE_FLAGS} -I${NC_INCLUDE_DIR}")
set(NCVIS_LINKER_FLAGS "${WX_LINK_FLAGS} -L${NC_LIB_DIR} -lnetcdf ${NC_LINK_FLAGS}")

set (CMAKE_SHARED_LINKER_FLAGS "-Wl,--as-needed ")
set (CMAKE_EXE_LINKER_FLAGS "-Wl,-rpath,${WXCONFIG_RPATH}/lib")

add_subdirectory("src")

